--- a/ejemplo1.html
+++ b/ejemplo1.html
@@ -13,6 +13,7 @@
     <h4>encabezado4</h4>
     <h5>encabezado5</h5>
     <h6>encabezado6</h6>
+    <h6>encabezado6</h6>
 
     <h2>Quines somos</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam fugiat recusandae libero corrupti cupiditate, reprehenderit, eaque eos ab quisquam ex maiores! Odit doloribus expedita voluptatibus vitae mollitia consequatur porro. Nulla?</p>
